Fixed the navbar. Should display correctly on mobile now

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -173,65 +173,40 @@ img .profile_pic {
 	text-transform: none;
 }
 /*********** Navbar **************/
-
-#container_n1 {
-	float:left;
-	width:100%;
-	position: relative;
-	right:25%;
+.nav_col_1 {
+	position: absolute;
+	top: 90%;
+	bottom: 0;
+	left: 0;
+	right: 75%;
+	background-color: #1ab2e8;
 }
 
-#container_n2 {
-	float:left;
-	width:100%;
-	position: relative;
-	right:25%;
+.nav_col_2 {
+	position: absolute;
+	top: 90%;
+	bottom: 0;
+	left: 25%;
+	right: 50%;
+	background-color: #f5c700;
 }
 
-#container_n3 {
-	float:left;
-	width:100%;
-	position: relative;
-	right:25%;
-}
-#container_n4 {
-	float:left;
-	width:100%;
-	overflow: hidden;
-	position: relative;
-	background-color: #ef4836;
-}
-
-#col_n1 {
-    float:left;
-    width: 25%;
-    position: relative;
-    left: 75%;
-    background-color: #1ab2e8;
-}
-
-#col_n2 {
-    float:left;
-    width:25%;
-    position: relative;
-    left: 75%;
-    background-color: #f5c700;
-}
-
-#col_n3 {
-    float:left;
-    width:25%;
-    position: relative;
-    left: 75%;
+.nav_col_3 {
+	position: absolute;
+	top: 90%;
+	bottom: 0;
+	left: 50%;
+	right: 25%;
 	background-color: #0eba9e;
 }
 
-#col_n4 {
-    float:left;
-    width:25%;
-    position: relative;
-    left: 75%;
-    background-color: #ef4836;
+.nav_col_4 {
+	position: absolute;
+	top: 90%;
+	bottom: 0;
+	left: 75%;
+	right: 0;
+	background-color: #ef4836;
 }
 
 .small-text .title {
@@ -241,18 +216,7 @@ img .profile_pic {
 .artist_link_div {
 	position: relative;
 }
-.navBarDiv {
-	position: fixed;
-	width: 100%;
-}
 
-.navBarWrapper {
-	
-	width: 100%;
-	position:absolute;
-	bottom:125;
-	left:0;
-}
 
 .wrapper {
 	min-height:100%;
